--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,34 @@
 boto3==1.13.11
 botocore==1.16.11
+cement==2.8.2
+certifi==2020.4.5.1
+chardet==3.0.4
 click==7.1.2
+cognitojwt==1.2.2
+colorama==0.4.3
 docutils==0.15.2
+ecdsa==0.15
+envs==1.3
 Flask==1.1.2
+Flask-Cognito==1.14
+future==0.16.0
+idna==2.7
 itsdangerous==1.1.0
 Jinja2==2.11.2
 jmespath==0.10.0
 MarkupSafe==1.1.1
+pathspec==0.5.9
+pyasn1==0.4.8
 python-dateutil==2.8.1
+python-jose==3.1.0
+PyYAML==5.3.1
+requests==2.20.1
+rsa==4.0
 s3transfer==0.3.3
+semantic-version==2.5.0
 simplejson==3.17.0
 six==1.14.0
-urllib3==1.25.9
+termcolor==1.1.0
+urllib3==1.24
+wcwidth==0.1.9
 Werkzeug==1.0.1
